[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsh"
version = "0.1.0"
description = "Locality Sensitive Hashing"
authors = [{name = "Rishi Chandra", email = "rishic@nvidia.com"}]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
