[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.11.0",
    "numpy~=1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "culsh"
version = "0.1.0"
description = "Locality Sensitive Hashing on GPUs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Rishi Chandra"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["culsh"]
